--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/RoyFBaltazar/capBackend/issues"
   },
-  "homepage": "https://github.com/RoyFBaltazar/capBackend#readme"
+  "homepage": "https://github.com/RoyFBaltazar/capBackend#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "mongoose": "^6.2.5",
+    "morgan": "^1.10.0"
+  }
 }
